external-crates/move/crates/move-compiler/tests/move_check/unit_test/other_failures_invalid_assignment.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02015]: invalid attribute
  ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:9:24
  │
9 │     #[expected_failure(vector_error=0, location=std::vector)]
  │                        ^^^^^^^^^^^^ Attribute 'vector_error' does not support assignment. Expected a name, e.g. 'vector_error'

error[E02015]: invalid attribute
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:17:24
   │
17 │     #[expected_failure(arithmetic_error=@0, location=n)]
   │                        ^^^^^^^^^^^^^^^^ Attribute 'arithmetic_error' does not support assignment. Expected a name, e.g. 'arithmetic_error'

error[E02015]: invalid attribute
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:21:24
   │
21 │     #[expected_failure(out_of_gas=bool, location=Self)]
   │                        ^^^^^^^^^^ Attribute 'out_of_gas' does not support assignment. Expected a name, e.g. 'out_of_gas'
